--- a/src/main/webapp/front-end/shop/css/ShoppingCart.css
+++ b/src/main/webapp/front-end/shop/css/ShoppingCart.css
@@ -1,104 +1,41 @@
-html, body {
-	font: 15px verdana, Times New Roman, arial, helvetica, sans-serif, Microsoft JhengHei;
-	background-color: #FFFFFF;
-}
+
 
 table#table-1 {
-	background-color: #CCCCFF;
-	border: 2px solid black;
+	background-color: #FFA9A9;
+	
 	text-align: center;
+	border-collapse:collapse;
 }
 
 table {
-	width: 850px;
+    width: 600px;
 	background-color: white;
 	margin-top: 1px;
 	margin-bottom: 2px;
+	border-collapse:collapse;
+	border-radius: 5px;
+	
+	
 }
 
-table, th, td {
-	border: 0px solid #CCCCFF;
+table, tr, th, td {
+	border: 0px solid #FFA9A9;
 	font-weight: bold;
+	border-collapse:collapse;
+	text-align: center;
 }
 
 tr:hover{
 /* background-color: #CCCCFF; */
 }
 
-th, td {
-	border: 1px solid #CCCCFF;
-	padding: 1px;
+td {
 	text-align: center;
 }
 
-form {
-	margin-bottom: 0px;
+#checkoutForm{
+	margin-left:330px;
 }
 
-h3, h4 {
-	color: red;
-	display: inline;
-	margin-right: 5px;
-}
 
-a:visited, a:link {
-	display:inherit;
-	text-align: center;
-	color: blue;
-	font-weight: bold;
-	/* 	text-decoration: none; */
-}
 
-a:hover, a:active {
-	display:inherit;
-	color: red;
-	font-weight: bold;
-	text-decoration: none;
-}
-
-.button {
-    border: none;
-    padding: 5px 5px;
-    border-radius: 5px;
-    width: 80px;
-/*     background: orange; */
-    box-shadow: inset 0 0 10px #000000;
-/*     font-weight: bold; */
-}
-
-.button:hover {
-    background: orange;
-}
-
- ul,
-      li {
-        margin: 0;
-        padding: 0;
-      }
-      .counter li {
-        float: left;
-        list-style-type: none;
-        width: 30px;
-        height: 30px;
-        text-align: center;
-        line-height: 30px;
-        border: #999 thin solid;
-        background-color: #fff;
-      }
-      .counter li input {
-        font-size: 20px;
-        width: 100%;
-        height: 100%;
-        outline: none;
-        /* -webkit-appearance: none; */
-        background: none;
-        margin: 0;
-        padding: 0;
-        border: 1px solid transparent;
-        border-radius: 0;
-      }
-      #countnum {
-        border-left: hidden;
-        border-right: hidden;
-        color: #666;
-      }
