--- a/src/main/webapp/back-end/css/admin.css
+++ b/src/main/webapp/back-end/css/admin.css
@@ -7,6 +7,13 @@
 	width: 1280px;
 } 
 
+/*layout*/
+.imgTable {
+    width: 300px;
+    height: 300px;
+}
+
+
 /**color**/
 .sym-purple {
 	background-color: rgb(161, 40, 148);
