--- a/src/main/webapp/back-end/groupproduct/css/admin.css
+++ b/src/main/webapp/back-end/groupproduct/css/admin.css
@@ -241,3 +241,9 @@ padding: 3.25rem;
     background: #ffa6eb;
     margin: 0 0.2rem;
   }
+  
+  .imgAd {
+   height: 180px;
+   width: 180px;
+  
+  }
