--- a/src/main/resources/static/front-end/product_detail/css/style.css
+++ b/src/main/resources/static/front-end/product_detail/css/style.css
@@ -807,6 +807,15 @@ h2 {
     background: #FF6F61;
 }
 
+.product-item .product-price h3 {
+    display: inline-block;
+    color: #ffffff;
+    margin: 0;
+}
+
+.product-item .product-price h3 span {
+    font-size: 16px;
+}
 .product-item .product-price h4 {
     display: inline-block;
     color: #ffffff;
@@ -814,6 +823,15 @@ h2 {
 }
 
 .product-item .product-price h4 span {
+    font-size: 16px;
+}
+.product-item .product-price h5 {
+    display: inline-block;
+    color: #ffffff;
+    margin: 0;
+}
+
+.product-item .product-price h5 span {
     font-size: 16px;
 }
 
